Revert Java 16 features. Heroku only supports Java 11.